# tweaks-sa

./: .clang-tidy  .clangd  CMakeLists.txt
.github/workflows/: release.yml
assets/: config.toml
lib/safetyhook/: CMakeLists.txt
lib/safetyhook/include/safetyhook/: allocator.hpp  common.hpp  context.hpp  easy.hpp  inline_hook.hpp  mid_hook.hpp  os.hpp  utility.hpp  vmt_hook.hpp
lib/safetyhook/src/: allocator.cpp  easy.cpp  inline_hook.cpp  mid_hook.cpp  os.windows.cpp  utility.cpp  vmt_hook.cpp
src/: config.cpp  config.h  main.cpp  patcher.cpp  patcher.h  util.h  utils.h
src/tweaks/: definitive_driveby.cpp  definitive_driveby.h  draw_cols.cpp  draw_cols.h  fancy_map.cpp  fancy_map.h  first_person.cpp  minor.cpp  minor.h  transparent_menu.cpp  tweaks.h
